k8s-old/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # Go get a slice of storage with specs specified by the PVC
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            # Note: the volume name and volume mount name are the same
            - name: postgres-storage
              # mountPath tells us where in the container
              # our storage will be available
              mountPath: /var/lib/postgresql/data
              # postgres specific configuration
              subPath: postgres
