k8s-old/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  # Annotations are additional config for the Ingress object
  annotations:
    # Tell kubernetes we want an ingress object based on the nginx project
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/use-regex: "true"

    # Tell Kubernetes if we match a route to rewrite requests
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          # Route requests to /... to the 'client' IP service
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
            # Route requests with /api/... to the 'server' IP service
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
